hphp/test/slow/class_type_constant/type_constant17.php.expectf
Fatal error: Class Child contains abstract type constant (T) and must therefore be declared abstract or define the remaining constants in %s on line 7
